Fix console bug and scrollbar

--- a/VividTracker/ClientApp/src/components/TrackersComponent/Styles/TrackersStyles.css
+++ b/VividTracker/ClientApp/src/components/TrackersComponent/Styles/TrackersStyles.css
@@ -12,9 +12,11 @@
     top: 5.2rem;
     border-radius: 30px 0px;
     width: 1080px;
-    height: -webkit-fill-available;
+    height: max-content;
+    min-height: -webkit-fill-available;
     padding-bottom: 10vh;
     margin-bottom: 70px;
+    
 }
 
 ::-webkit-scrollbar {
